fixed the bug that causes mis-alignment of the app when viewed in mobile devices as well as update the operator container grid-display

--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,6 @@ header .description {
  */
 
 .container {
-	max-width: 1080px;
-	width: 500px;
 	margin: 0 auto;
 }
 
@@ -103,7 +101,6 @@ header .description {
 	grid-row-start: 5;
 	grid-row-end: 11;
 	height: 100%;
-	/* border: 2px solid red; */
 }
 
 .calc-display-container {
@@ -123,7 +120,6 @@ header .description {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 7px;
-	/* margin-bottom: 45px; */
 }
 
 .digit {
@@ -193,11 +189,39 @@ header .description {
 
 .calc-operator-container {
 	display: grid;
-	margin-top: 5px;
-	
+	padding-top: 9px;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(5, 1fr);
 }
 
+#backspace {
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
 
+#div {
+	grid-row-start: 2;
+	grid-row-end: 3;
+	padding-top: 6px;
+}
+
+#mul {
+	grid-row-start: 3;
+	grid-row-end: 4;
+	padding-top: 6px;
+}
+
+#sub {
+	grid-row-start: 4;
+	grid-row-end: 5;
+	padding-top: 6px;
+}
+
+#add {
+	grid-row-start: 5;
+	grid-row-end: 6;
+	padding-top: 6px;
+}
 /* 
 	========================================================================================
 	========================================================================================
